메타태그추가

--- a/aliceskin/index.html
+++ b/aliceskin/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA_Compatible" content="ie=edge">
     <title>김원희 포토폴리오</title>
     <!-- 스토어.js 불러오기 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/store2/2.11.1/store2.min.js"></script>
@@ -1031,4 +1032,6 @@
         </nav>
     </div>
     <script src="index.js"></script>
-</body></html>
+</body>
+
+</html>
