--- a/bnx/index.html
+++ b/bnx/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA_Compatible" content="ie=edge">
     <title>김원희 포토폴리오</title>
     <!-- 모바일에서 기기의 디스플레이 성능에 상관없이, 기기의 물리적인 크기 기준으로 크기가 잡힌다. -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -297,4 +298,6 @@
         </nav>
     </div>
     <script src="index.js"></script>
-</body></html>
+</body>
+
+</html>
